mType/tests/testFiles/error/error/classModifyingFinalField.mt
class TestClass {
    final int value = 10;
    
    void changeValue() {
        value = 20;
    }
}